# CoCodes

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  release.yml
design/grok-mascot/: README.md
docs/: mobile-sync-design.md
landing/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
landing/app/: globals.css  layout.tsx
landing/components/: DeckShowcase.tsx  DeckSprite.tsx  DelegationDemo.tsx  DownloadCta.tsx  FeatureBento.tsx  Footer.tsx  Hero.tsx  Landing.tsx  LiveCliStrip.tsx  MouseRift.tsx  Nav.tsx  PersonaConstellation.tsx  ProviderGrid.tsx  TerminalMock.tsx  ThemeGallery.tsx  lavaWebGL.ts  ui.tsx
landing/lib/: content.ts  lang.tsx  palettes.ts  useInView.ts
scripts/: gen-icon.mjs
src/: App.tsx  main.tsx  migrateStorage.ts  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commit.rs  ai_summary.rs  codex_proxy.rs  directory.rs  fs.rs  git.rs  headless.rs  lib.rs  llm.rs  main.rs  mcp.rs  notify_hooks.rs  persona.rs  providers.rs  screenshot.rs  sessions.rs  terminal.rs
src/components/: Tooltip.tsx
src/hooks/: useBranch.ts  useClaudeSessions.ts  useGit.ts  useMcp.ts  useModelActivity.ts  usePaneLabel.ts  usePersonaModel.ts  usePersonas.ts  useProviderModels.ts  useTerminalBusy.ts
src/state/: activeTerminalStore.ts  agentPulse.ts  attentionNav.ts  attentionStore.ts  deckStore.ts  delegationMonitor.ts  directoryStore.ts  dragState.ts  gitStore.ts  liveModels.ts  mcpStore.ts  orbThemes.ts  paletteStore.ts  paneReports.ts  panelPalettes.ts  profileStore.ts  shellStore.ts  sidebarStore.ts  sidebarTabStore.ts  terminalActivity.ts  terminalRegistry.ts  themeDecor.ts  themeStore.ts  uiPalette.ts  updateStore.ts  useClaudeChat.ts  warriorActivity.ts  windowStore.ts
src/util/: openExternal.ts
src/views/Chat/: ChatView.tsx
src/views/Claude/: ClaudeSidebar.tsx  ClaudeTab.tsx  ClaudeTerminal.tsx  ClaudeTerminalView.tsx  CommandPalette.tsx  EmptyPane.tsx  FileFinder.tsx  GroupPickerModal.tsx  PaneLayout.tsx  SessionDeck.tsx  SessionRow.tsx  ShellOverlay.tsx  Toolbar.tsx  formatTime.ts  fuzzy.ts
src/views/Claude/Warrior/: WarriorDojo.tsx  poses.tsx
src/views/Cockpit/: AppLogo.tsx  AttentionCenter.tsx  AttentionInbox.tsx  Cockpit.tsx  GoalConfetti.tsx  LaurelWreath.tsx  OracleDescent.tsx  PalettePanel.tsx  RingIcon.tsx  TempleFrame.tsx  ThemeCelebrate.tsx  ThemeFrame.tsx  TriondaBall.tsx  UpdateButton.tsx  WindowControls.tsx  Wordmark.tsx
src/views/Git/: GitPanel.tsx  graph.ts
src/views/MCP/: McpConfigEditor.tsx  McpPanel.tsx  McpServerItem.tsx  mcpPresets.ts
src/views/Persona/: ClaudeMascot.tsx  CodexMascot.tsx  CostumedClaudeMascot.tsx  CostumedGrokMascot.tsx  GrokMascot.tsx  KimiMascot.tsx  PersonaAvatar.tsx  PersonaEditor.tsx  PersonaManager.tsx  ProfileConstellation.tsx  ProviderManager.tsx  providerPresets.ts
src/views/PersonaOrb/: PersonaOrb.tsx  orbShaders.ts  orbSprings.ts
src/views/Screenshot/: ScreenshotOverlay.tsx
~/.tauri/: cocodes.key  cocodes.key.pub
